--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Shadowsocks+V2Ray-plugin Rapid deployment",
+  "name": "2",
   "description": "Deploy Shadowsocks+V2Ray-plugin to Heroku.",
   "keywords": ["V2ray", "Shadowsocks", "V2Ray-plugin"],
   "env": {
